# dir-contract

./: .gitignore  .gitmodules  Cargo.toml  README.md  contract.md  dev.sh  dircontract.abi.json  experimental.sh
contracts/dir-contract/: Cargo.toml  contract.md  dev.sh  dircontract.abi.json
contracts/dir-contract/src/: dir.rs  lib.rs  token.rs
contracts/eosio_token/: Cargo.toml  eosio_token.abi.json
contracts/eosio_token/src/: lib.rs
dir-contract/: README.md
dir-contract/src/: dir.rs
docker/: Dockerfile  docker-compose.yml  eos.env
src/: dir.rs  lib.rs  vote.rs
testing/: package.json
testing/tests/: basic_operations.js  token.js  vote.js  vote_experimental.js  vote_operations.js
